configs/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: custom-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 9080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: country
spec:
  hosts:
  - "*"
  gateways:
  - custom-gateway
  http:
  - match:
    - uri:
        exact: /countrypage
    route:
    - destination:
        host: countrypage-cluster-ip
        port:
          number: 9080
